# Sentiment-Analysis-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  deps.py  limits_mv.py  logging_mw.py  main.py  schemas.py
model/: train.py
tests/: conftest.py  test_health.py  test_predict.py
